# rust-auth-svc

./: .env  .gitignore  Cargo.toml  docker-compose.yml
db-data/: postmaster.pid
db-data/base/1/: 2619
db-data/base/5/: 1247  1249  1249_fsm  1255  1259  1259_fsm  2224  24589  24594  24595  24597  24598  24604  24606  2579  2604  2606  2608  2609  2610  2610_fsm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2675  2678  2679  2690  2691  2703  2704  (+6 more)
db-data/global/: 1260  pg_control  pg_internal.init
db-data/pg_xact/: 0000
migrations/: 20230429210709_users-table.sql
src/: config.rs  error.rs  main.rs  utils.rs
src/api/: create_user.rs  db_read.rs  delete_user.rs  error.rs  mod.rs
src/api/store/: error.rs  mod.rs
src/crypt/: error.rs  mod.rs
tests/: api-tests.rs
