[package]
name = "auth_svc"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
axum = "0.6"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-cookies = "0.9"
lazy-regex = "2"
async-trait = "0.1"
strum_macros = "0.24"
uuid = { version = "1", features = ["v4", "fast-rng"] }
serde_with = "2"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls"] }
dotenv = "0.15.0"
thiserror = "1.0.40"
ulid = "1.0.0"
time = "0.3.21"
base64-url = "2.0.0"
hmac = "0.12"
sha2 = "0.10"
once_cell = "1.17.1"
rand = "0.8.5"
axum-macros = "0.3.7"
rust-argon2 = "1.0"

[dev-dependencies]
anyhow = "1" 
httpc-test = "0.1.1"
